test_regress/t/t_constraint_before_randc_bad.out
%Error: t/t_constraint_before_randc_bad.v:11:45: Randc variables not allowed in 'solve before' (IEEE 1800-2023 18.5.9)
   11 |     constraint raint2_bad { solve b1 before b2; }   
      |                                             ^~
        t/t_constraint_before_randc_bad.v:11:29: ... Location of restricting expression
   11 |     constraint raint2_bad { solve b1 before b2; }   
      |                             ^~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
